# pypom-selenium

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  release.sh  requirements.txt  tox.ini
requirements/: pipenv.txt
src/pypom_selenium/: __init__.py  exception.py  page.py  region.py  selenium_driver.py  view.py
tests/: conftest.py  test_page.py  test_region.py
